--- a/packages/ols/package.yaml
+++ b/packages/ols/package.yaml
@@ -12,9 +12,12 @@ categories:
 source:
   id: pkg:github/DanielGavin/ols@nightly
   asset:
-    - target: [darwin_x64, darwin_arm64]
+    - target: darwin_x64
       file: ols-x86_64-darwin
       bin: ols-x86_64-darwin
+    - target: darwin_arm64
+      file: ols-arm64-darwin
+      bin: ols-arm64-darwin
     - target: linux_x64_gnu
       file: ols-x86_64-unknown-linux-gnu
       bin: ols-x86_64-unknown-linux-gnu
